--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,15 +4,31 @@ security:
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    role_hierarchy:
+        ROLE_EDITOR: [ROLE_USER]
+        ROLE_ADMIN: [ROLE_EDITOR]
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+            form_login:
+                # "app_login" is the name of the route created previously
+                login_path: security.login
+                check_path: security.login
+                default_target_path: app_admin_admin
+                failure_path: security.login
+            logout:
+                path: security.logout
+                target: security.login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
