--- a/.env
+++ b/.env
@@ -32,6 +32,13 @@ APP_SECRET=f9d507cdd1d7286141c284e7ea87f018
 DATABASE_URL="postgresql://root:Mypsql_07@127.0.0.1:5432/symf_admin_start"
 ###< doctrine/doctrine-bundle ###
 
+DB_CONNECTION=postgresql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=symf_admin_start
+DB_USERNAME=root
+DB_PASSWORD=Mypsql_07
+
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
