--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,8 +6,8 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     role_hierarchy:
         ROLE_EDITOR: [ROLE_USER]
+        ROLE_MARCHAND: [ROLE_MARCHAND]
         ROLE_ADMIN: [ROLE_EDITOR]
-        ROLE_SUPER: [ROLE_SUPERADMIN]
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
